<resources>
    <string name="app_name">Calculadora</string>
    <string name="btnAC">AC</string>
    <string name="btnMaisMenos">+/-</string>
    <string name="btnPorcento">%</string>
    <string name="btnDiv">/</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnMultiplica">X</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btnMenos">-</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btnMais">+</string>
    <string name="btnZero">0</string>
    <string name="btnPonto">.</string>
    <string name="btnIgual">=</string>
</resources>